# thewishmachine

./: DEPLOYMENT.md  README.md  docker-compose.yml  run-dev.bat  vercel.json
backend/: Dockerfile  README.md  init_db.py  main.py  pyproject.toml  requirements.txt
backend/data/: wishes.db
frontend/: Dockerfile  package-lock.json  wish-machine.tsx
frontend/%USERPROFILE%/npm-cache/_logs/: 2025-07-26T16_03_31_823Z-eresolve-report.txt
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/wishes/: page.tsx
